[gd_scene load_steps=5 format=3 uid="uid://veo3d7ysvncp"]

[ext_resource type="Script" path="res://scripts/gum_ball.gd" id="1_ts4us"]
[ext_resource type="ArrayMesh" uid="uid://dumvm4ewfma0e" path="res://assets/GumBall.obj" id="2_tr37a"]

[sub_resource type="SphereShape3D" id="SphereShape3D_fobg7"]
radius = 0.219802

[sub_resource type="SphereShape3D" id="SphereShape3D_uor2p"]
radius = 0.344196

[node name="GumBall" type="RigidBody3D" groups=["holdable", "portable"]]
script = ExtResource("1_ts4us")

[node name="GumBallMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, -0.206, 0)
mesh = ExtResource("2_tr37a")

[node name="PhysicCollider" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_fobg7")

[node name="HitZone" type="Area3D" parent="."]

[node name="InteractCollider" type="CollisionShape3D" parent="HitZone"]
shape = SubResource("SphereShape3D_uor2p")

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="HitZone" to="." method="_on_hit_zone_body_entered"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_timer_timeout"]
